--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <table width="200" border="1" id="1">
   <tbody>
     <tr>
-      <td>key</td>
-      <td>value</td>
+      <th>key</th>
+      <th>value</th>
     </tr>
     <tr>
       <td>Ergebis</td>
