--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <td>wm</td>
       <td>dfdf</td>
     </tr>
+	      <tr>
+      <td>Status</td>
+      <td>rot</td>
+    </tr>
   </tbody>
 </table>
 </body>
