tabellen id geändert

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<table width="200" border="1" id="1">
+<table width="200" border="1" id="TabellenId_Hallo">
   <tbody>
     <tr>
       <td>key</td>
@@ -28,14 +28,14 @@
     </tr>
 	      <tr>
       <td>Status</td>
-      <td>rot</td>
+      <td>magenta</td>
     </tr>
   </tbody>
 </table>
 	
 	
 	
-	<table width="200" border="1" id="2">
+	<table width="200" border="1" id="abellenId_bye">
   <tbody>
     <tr>
       <td>key</td>
