--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 }
 .1 {
 }
+#Staustable {
+}
 </style>
 </head>
 
@@ -33,7 +35,7 @@
   </tbody>
 </table>
 	
-	
+	-------
 	
 	<table width="200" border="1" id="TabellenId_bye">
   <tbody>
@@ -59,5 +61,23 @@
     </tr>
   </tbody>
 </table>
+	
+<p> ---- </p>
+<p>&nbsp;</p>
+	<table width="200" border="1" id="Staustable">
+	  <tbody>
+	    <tr>
+	      <td>&nbsp;Errorcode</td>
+	      <td>&nbsp; Massage&nbsp;</td>
+        </tr>
+	    <tr>
+	      <td>&nbsp;400</td>
+	      <td>Der Anschluss wurde nicht gefunden&nbsp;</td>
+        </tr>
+      </tbody>
+</table>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+	<p>&nbsp;</p>
 </body>
 </html>
